ADD.added the heading in section with styles

--- a/index.html
+++ b/index.html
@@ -69,10 +69,14 @@
         </section> 
         
         <!-- main body -->
+        <section class="heading">
+            <h3 id="heading-first">Your Project</h3>
+            <h3 id="heading-second">Announcements</h3>
+        </section>
         <section class="main-body"> <!-- 7 -->
             <section class="body-first-heading">
                 <div class="aside-announcements">
-                    <span class="aside-announcements-heading">Announcements</span>
+                    <!-- <span class="aside-announcements-heading">Announcements</span> -->
                     <div class="aside-announcements-body">
                     <div class=" aside-announcements-first-para">Site Maintenance</div>
                     <div class="aside-announcements-second-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
