ADD.added the icon for menus

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="author" content="JAIGANESH V">
     <meta name="description" content="replication of an image to website">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    
 
     <title>PROJECT DASHBOARD</title>
 </head>
@@ -15,20 +17,20 @@
         <section class="dashboard-left">  
 
         <section class="left-main">   
-            <h1 class="first-heading">Dashboard</h1> 
+            <h1 class="first-heading"><i class="bi bi-border-all"></i>Dashboard</h1>
             <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Message</li>
-                <li>Tasks</li>
-                <li>Communities</li>
+                <li><i class="bi bi-house"></i>Home</li>
+                <li><i class="bi bi-person"></i>Profile</li>
+                <li><i class="bi bi-chat-left"></i>Message</li>
+                <li><i class="bi bi-list-task"></i>Tasks</li>
+                <li><i class="bi bi-people-fill"></i>Communities</li>
             </ul>
         </section> 
         <section class="left-support"> 
             <ul>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>privacy</li>
+                <li><i class="bi bi-gear"></i>Settings</li>
+                <li><i class="bi bi-question-square"></i>Support</li>
+                <li><i class="bi bi-shield-check"></i>privacy</li>
             </ul>
         </section> 
         </section> 
